# joermungandr

./: .gitignore  README.md  TODO.md  checkpoint.py  config.py  data.py  main.py  model.py  pyproject.toml  train.py
joermungandr/: __init__.py  checkpoint.py  data.py  encoder_train.py  model.py  seq2seq_train.py  train.py  train_utils.py
joermungandr/encoder/: __init__.py  data.py  model.py  train.py
joermungandr/full_trained/: __init__.py  checkpoint.py  layers.py
joermungandr/full_trained/encoder/: train.py
joermungandr/full_trained/seq2seq/: generate.py  model.py
joermungandr/pretrained/: __init__.py  config.py  data.py  download.py  model.py  train.py
joermungandr/seq2seq/: __init__.py  data.py  generate.py  train.py
scripts/: train_tokenizer.sh
